--- a/Day2/index.html
+++ b/Day2/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>CSS</title>
-        <link rel="stylesheet" type="text/css" href="design.css">
-    </head>
-    <body>
-        <h1 style="color:red; background-color: aqua;">Bốn mùa</h1>
-        <h2 class="heading">Mùa xuân</h2>
-        <img src="https://miro.medium.com/max/2000/1*oxzfllcH_OqAppRptmWa8A.jpeg" height="540px" width="960px" />
-        <p class="paragraph1">Mùa xuân là một trong bốn mùa thường được công nhận ở những vùng ôn đới và cận cực, tiếp nối mùa đông và diễn ra trước mùa hạ. Về mùa xuân có rất nhiều định nghĩa, nhưng cách sử dụng khác nhau tùy vào khí hậu, văn hóa và tập quán của mỗi khu vực. Khi ở Bắc bán cầu đang là mùa xuân thì ở Nam bán cầu sẽ là mùa thu. Vào ngày xuân phân, ngày dài xấp xỉ 12 giờ và kể từ đó trở đi quảng thời gian ban ngày bắt đầu tăng lên. Ngoài đề cập đến một mùa trong năm, mùa xuân hay "thời kỳ mùa xuân" còn thường được liên tưởng đến sự tái sinh, trẻ hóa, đổi mới, sự sống lại và tái phát triển.</p>
-        <h2>Mùa thu</h2>
-        <p class="paragraph2">Mùa thu là mùa thứ ba trong bốn mùa trên Trái Đất và một số hành tinh. Nó là giai đoạn chuyển tiếp từ mùa hạ sang mùa đông.</p>
-        <h2>Mùa hạ</h2>
-        <p class="paragraph3">Mùa hạ hay mùa hè là một trong bốn mùa thường được công nhận ở các vùng ôn đới và cận cực. Mùa hạ là mùa nóng nhất và thời điểm nó diễn ra rơi vào khoảng giữa mùa xuân và mùa thu. Vào ngày hạ chí, ngày là dài nhất còn đêm thì ngắn nhất, và kể từ sau ngày hạ chí trở đi quãng thời gian ban ngày bắt đầu giảm dần. Điểm khởi đầu của mùa hè là khác nhau phụ thuộc vào khí hậu, truyền thống và văn hóa của từng khu vực. Khi ở Bắc bán cầu đang là mùa hè thì ở Nam bán cầu sẽ là mùa đông và ngược lại.</p>
-        <h2>Mùa đông</h2>
-        <p class="paragraph4">Mùa đông là một trong bốn mùa trên Trái Đất và một số hành tinh. Nó là mùa có ngày ngắn nhất và nhiệt độ thấp nhất. Ở những vùng xa xích đạo, mùa đông thường được biết đến qua việc tuyết rơi, là mùa cuối cùng trong năm. Nhiệt độ thấp nhất vào mùa đông thường là vào tháng một ở Bắc Bán Cầu và tháng bảy ở Nam Bán Cầu. Mùa đông là mùa các môn thể thao cần tuyết được tổ chức. Ở một số nơi, mùa đông còn được gọi là mùa khô ở những vùng nhiệt đới gió mùa .</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Letter</title>
+</head>
+<body style="background-color: #DBECFE">
+    <div style="display: flex; flex-wrap: wrap;">
         <div>
-            <p>Giới thiệu</p>
+            <img style="background-repeat: no-repeat; width:650.4px; height: 617.5px;"src="https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-0/p526x296/116426585_309497887067275_7423585294899687058_o.jpg?_nc_cat=106&_nc_sid=730e14&_nc_ohc=4YscrdgUW1oAX9Ek03w&_nc_ht=scontent.fhan2-2.fna&_nc_tp=6&oh=872e3458c0f4f9441721cb5c2467ffea&oe=5F5098B2"/>
         </div>
-    </body>
-</html> 
+        <div>
+            <h1 style="margin: 50px 0px 0px 175px; font-family: Montserrat, sans-serif; font-size: 60px;">THANK YOU</h1>
+            <h2 style="margin: 20px 170px 0px 210px; padding-left: 10px; border-top: 2px solid black; border-bottom: 2px solid black;">DOCTORS AND NURSES</h2>
+            <div style="display: flex;">
+                <p style="margin-left: 50px; font-size: 17px; color: #5EA57B; font-family: Montserrat, sans-serif">Number of COVID-19 patients:</p>
+                <p style="color: #DBECFE">hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
+                <p style="font-size: 17px; color: red">18,8m</p>
+            </div>
+        </div>        
+    </div>
+</body>
+</html>
