--- a/Day2/index.html
+++ b/Day2/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letter</title>
+    <style>
+        p, div{
+            margin: 10px 0px 0px 0px;
+            padding: 0px 0px 0px 0px;
+        }
+    </style>
 </head>
 <body style="background-color: #DBECFE">
     <div style="display: flex; flex-wrap: wrap;">
-        <div>
+        <div style="margin-top: 0px !important">
             <img style="background-repeat: no-repeat; width:650.4px; height: 617.5px;"src="https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-0/p526x296/116426585_309497887067275_7423585294899687058_o.jpg?_nc_cat=106&_nc_sid=730e14&_nc_ohc=4YscrdgUW1oAX9Ek03w&_nc_ht=scontent.fhan2-2.fna&_nc_tp=6&oh=872e3458c0f4f9441721cb5c2467ffea&oe=5F5098B2"/>
         </div>
         <div>
             <h1 style="margin: 50px 0px 0px 175px; font-family: Montserrat, sans-serif; font-size: 60px;">THANK YOU</h1>
             <h2 style="margin: 20px 170px 0px 210px; padding-left: 10px; border-top: 2px solid black; border-bottom: 2px solid black;">DOCTORS AND NURSES</h2>
-            <div style="display: flex;">
+            <div style="display: flex">
                 <p style="margin-left: 50px; font-size: 17px; color: #5EA57B; font-family: Montserrat, sans-serif">Number of COVID-19 patients:</p>
-                <p style="color: #DBECFE">hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
+                <p style="color: #DBECFE">hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
+                <p style="font-size: 17px; color: red">18,8m</p>
+            </div>
+            <div style="display: flex">
+                <p style="margin-left: 50px; font-size: 17px; color: #5EA57B; font-family: Montserrat, sans-serif">Number of COVID-19 patients:</p>
+                <p style="color: #DBECFE">hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
                 <p style="font-size: 17px; color: red">18,8m</p>
             </div>
         </div>        
