--- a/index.html
+++ b/index.html
@@ -3,32 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="design.css"/>
-    <title>Animation with CSS</title>
+    <title>Letter</title>
+    <style>
+        p, div{
+            margin: 10px 0px 0px 0px;
+            padding: 0px 0px 0px 0px;
+        }
+    </style>
 </head>
-<body>
-    <div class="login">
-        <p>LOGIN</p>
-    </div>
-    <div style="margin-top: 20px">
-        <div>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f1271c33ea50_1595044291.jpg"/>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f12724a03143_1595044426.jpg"/>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/22/5f17a6a7dfa84_1595385511.jpg"/>
+<body style="background-color: #DBECFE">
+    <div style="display: flex; flex-wrap: wrap;">
+        <div style="margin-top: 0px !important">
+            <img style="background-repeat: no-repeat; width:650.4px; height: 617.5px;"src="https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-0/p526x296/116426585_309497887067275_7423585294899687058_o.jpg?_nc_cat=106&_nc_sid=730e14&_nc_ohc=4YscrdgUW1oAX9Ek03w&_nc_ht=scontent.fhan2-2.fna&_nc_tp=6&oh=872e3458c0f4f9441721cb5c2467ffea&oe=5F5098B2"/>
         </div>
         <div>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f127ac1794d1_1595046593.jpg"/>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f127c296eb81_1595046953.jpg"/>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f1282ff33d60_1595048703.jpg"/>
-        </div>
-        <div>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f128126e2915_1595048230.jpg"/>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f1282a86de04_1595048616.jpg"/>
-            <img class="image" src="https://admin.thinkpro.vn//backend/uploads/product/color_images/2020/7/17/5f1270cd45dea_1595044045.jpg"/>
-        </div>
-    </div>
-    <div>
-        <img class="heart" src="https://www.nicepng.com/png/detail/8-82063_heart-png-pink-cartoon-love-hearts.png"/>
+            <h1 style="margin: 50px 0px 0px 115px; color: #1B305C; font-family: Montserrat, sans-serif; font-size: 80px;">THANK YOU</h1>
+            <h2 style="margin: 20px 170px 0px 210px; color: #1B305C; padding-left: 10px; border-top: 2px solid #1B305C; border-bottom: 2px solid black;">DOCTORS AND NURSES</h2>
+            <div style="display: flex">
+                <p style="margin-left: 50px; font-size: 28px; color: #5EA57B; font-family: Montserrat, sans-serif">Number of COVID-19 patients:</p>
+                <p style="color: #DBECFE">hhhhhhhhhhhhhh</p>
+                <p style="font-size: 28px; color: red">18,8m</p>
+            </div>
+            <div style="display: flex">
+                <p style="margin-left: 50px; font-size: 28px; color: #5EA57B; font-family: Montserrat, sans-serif">Number of recovered cases:</p>
+                <p style="color: #DBECFE">hhhhhhhhhhhhhhhhh</p>
+                <p style="font-size: 28px; color: red; padding-left: 5px;">11,3m</p>
+            </div>
+            <div>
+                <p style="font-family: Cursive; font-size: 46px; text-align: right; color: #1B305C"><i>"We can do it..."</i></p>
+            </div>
+            <div>
+                <p style="color: #5598B5; padding-left: 150px; font-size: 27px; font-family: Montserrat">- British doctors -</p>
+            </div>
+        </div>        
     </div>
 </body>
 </html>
