--- a/Kiểm tra/kiem-tra.html
+++ b/Kiểm tra/kiem-tra.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type='text/css' href="kiem-tra.css"/>
     </head>
     <body>
+        <h1 style="text-align: center; color: red">Những loài cây có giá trị đặc biệt đang nguy cấp</h1>
         <div class="all">
             <div class="caption" style="width: 402.7px; margin-left: 30px">
                 <a href="Thong-hai-la-det.html">
