--- a/Kiểm tra/Cay-hoang-dan.html
+++ b/Kiểm tra/Cay-hoang-dan.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cây hoàng đàn</title>
     <link rel="stylesheet" type="text/css" href="chi-tiet.css"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div>
