--- a/Kiểm tra/kiem-tra.html
+++ b/Kiểm tra/kiem-tra.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <link rel="stylesheet" type='text/css' href="kiem-tra.css"/>
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
         <h1 style="text-align: center; color: red">Những loài cây có giá trị đặc biệt đang nguy cấp</h1>
