--- a/Kiểm tra/kiem-tra.html
+++ b/Kiểm tra/kiem-tra.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <link rel="stylesheet" type='text/css' href="kiem-tra.css"/>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <title>Kiểm tra</title>
     </head>
     <body>
         <h1 style="text-align: center; color: red">Những loài cây có giá trị đặc biệt đang nguy cấp</h1>
