--- a/Day5/index.html
+++ b/Day5/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Javascript Training</title>
-    </head>
-    <body>
-        <p>Hello World</p>
-        <script src="./main.js"></script>
-    </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Canvas</title>
+</head>
+
+<body>
+  <canvas id="canvas" width="600" height="400" style="background-color: cadetblue;"></canvas>
+  <script>
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d")
+    ctx.fillStyle = "black"
+    ctx.strokeStyle = 'red';
+    ctx.fillRect(0, 0, 50, 50)
+    ctx.fillStyle = "white"
+    ctx.fillRect(50, 0, 50, 50)
+    ctx.fillStyle = "black"
+    ctx.fillRect(100, 0, 50, 50)
+  </script>
+</body>
+
 </html>
