--- a/Day5/index.html
+++ b/Day5/index.html
@@ -19,6 +19,13 @@
     ctx.fillRect(50, 0, 50, 50)
     ctx.fillStyle = "black"
     ctx.fillRect(100, 0, 50, 50)
+    ctx.fillStyle = "black"
+    ctx.strokeStyle = 'red';
+    ctx.fillRect(0, 0, 50, 50)
+    ctx.fillStyle = "white"
+    ctx.fillRect(150, 0, 100, 50)
+    ctx.fillStyle = "black"
+    ctx.fillRect(200, 0, 50, 50)
   </script>
 </body>
 
