--- a/facebookregister.html
+++ b/facebookregister.html
@@ -53,6 +53,9 @@
             cursor: pointer;
             margin: auto;
         }
+        a:hover {
+            text-decoration: underline;
+        }
         .register {
             background-color: #42b72a;
             padding: 0px 16px 0px 16px;
