--- a/facebookregister.html
+++ b/facebookregister.html
@@ -61,6 +61,9 @@
             padding: 0px 16px 0px 16px;
             font-size: 17px;
         }
+        .register:hover {
+            background-color: #36A420;
+        }
         #login {
             width: 364px;
         }
