--- a/facebookregister.html
+++ b/facebookregister.html
@@ -16,7 +16,7 @@
             line-height: 32px;
             width: 500px;
         }        
-        input {
+        input, .select-year{
             font-family: inherit;
             border-radius: 6px;
             width: 284px;
@@ -114,12 +114,46 @@
             <form>
                 <div>
                     <div id="margin-input">
-                        <input type="email" placeholder="Email hoặc số điện thoại">
+                        <input type="email" placeholder="Email hoặc số điện thoại" required="required">
                     </div>
                     <br/>   
                     <div id="margin-input" class="unique">
-                        <input type="password" placeholder="Mật khẩu">
+                        <input type="password" placeholder="Mật khẩu" required="required">
                     </div>
+                    <select id="margin-input" class="select-year" style="height: 50px;">
+                        <option>---Choose your birth year---</option>
+                        <option>1990</option>
+                        <option>1991</option>
+                        <option>1992</option>
+                        <option>1993</option>
+                        <option>1994</option>
+                        <option>1995</option>
+                        <option>1996</option>
+                        <option>1997</option>
+                        <option>1998</option>
+                        <option>1999</option>
+                        <option>2000</option>
+                        <option>2001</option>
+                        <option>2002</option>
+                        <option>2003</option>
+                        <option>2004</option>
+                        <option>2005</option>
+                        <option>2006</option>
+                        <option>2007</option>
+                        <option>2008</option>
+                        <option>2009</option>
+                        <option>2010</option>
+                        <option>2011</option>
+                        <option>2012</option>
+                        <option>2013</option>
+                        <option>2014</option>
+                        <option>2015</option>
+                        <option>2016</option>
+                        <option>2017</option>
+                        <option>2018</option>
+                        <option>2019</option>
+                        <option>2020</option>
+                    </select>
                     <br/>
                 </div>
                 <button type="button" id="login">Đăng nhập</button>
