--- a/facebookregister.html
+++ b/facebookregister.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Facebook - Đăng nhập hoặc đăng kí</title>
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <style>
         img {
             width: 300px;
@@ -25,6 +26,7 @@
             width: 330px;
             height: 22px;
             border: 1px solid gray;
+            color: gray;
         }
         body {
             background-color: #F0F2F5;
@@ -120,7 +122,8 @@
                     <div id="margin-input" class="unique">
                         <input type="password" placeholder="Mật khẩu" required="required">
                     </div>
-                    <select id="margin-input" class="select-year" style="height: 50px;">
+                    <div id="margin-input">
+                    <select class="select-year" style="height: 52px; width: 364px; margin-top: 6px;">
                         <option>---Choose your birth year---</option>
                         <option>1990</option>
                         <option>1991</option>
@@ -154,6 +157,7 @@
                         <option>2019</option>
                         <option>2020</option>
                     </select>
+                    </div>
                     <br/>
                 </div>
                 <button type="button" id="login">Đăng nhập</button>
