--- a/trangchu.html
+++ b/trangchu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Menu</title>
+        <title>Trang chủ</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="trangcbu.css"/>
     </head>
