--- a/gioithieu.html
+++ b/gioithieu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Menu</title>
+        <title>Giới thiệu</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="gioithieu.css"/>
     </head>
