--- a/HTML & CSS/Girls learn to code/trangchu.html
+++ b/HTML & CSS/Girls learn to code/trangchu.html
@@ -5,81 +5,6 @@
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="trangchu.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin"/>
-        <style>
-        .container {
-            width: 95%;
-            padding: 10px;
-            justify-content: space-around;
-            display: flex;
-            margin-top: 13px;
-            margin-left: 390px;
-            margin-right: 100px;
-            float: right;
-        }
-        a {
-            color: black;
-            text-transform: capitalize;
-            font-size: 24px;
-            text-decoration: none;
-            font-family: sans-serif;
-            transition-duration: 0.5s;
-        }
-        .description {
-            font-size: 30px;
-            margin-top: 0px;
-            font-family: 'Cabin'
-        }
-        a:hover {
-            color: #378B9B;
-            transition-duration: 0.5s;
-            animation-duration: 1s;
-            animation-name: gachchan;
-        }
-        .img {
-            width: 270px;
-        }
-        @keyframes gachchan {
-            0% {
-                border-bottom: 3px solid transparent;
-            }
-            100% {
-                border-bottom: 3px solid #378B9B
-            }
-        }
-        .center {
-            text-align: center;
-        }
-        .box {
-            width: 24%;
-            margin: 15px;
-            box-shadow: 0 0 3px rgba(0,0,0,0.3);
-            transition: 0.5s;
-            overflow: hidden;
-            text-align: center;
-        }
-        h2 {
-            font-family: 'Cabin';
-            color: #378B9B
-        }
-        .sub-description {
-            font-family: 'Cabin';
-            font-size: 28px;
-            font-weight: bold;
-            margin-bottom: 30px;
-        }
-        .more {
-            font-size: 28px;    
-            font-family: 'Cabin';
-            background-color: #378B9B;
-            width: 40%;
-            color: white;
-            margin-left: 80px;
-            margin-bottom: 20px;
-        }
-        .img-description {
-            width: 240px;
-        }
-        </style>
     </head>
     <body>
         <div style="display: flex">
@@ -104,49 +29,49 @@
                     </div>
                     <div class="description center">Trải nghiệm</div>
                     <div class="sub-description center">"Work From Home"</div>
-                    <div class="more center">More</div>
+                    <div class="more center"><p>More</p></div>
                 </div>
                 <div class="box">
                     <div>
-                        <img class="img-description" src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.0-9/s960x960/117825945_332396151296741_4433696330650530520_o.jpg?_nc_cat=105&_nc_sid=8024bb&_nc_ohc=zVXhB9t_vKEAX9LXmRE&_nc_ht=scontent.fhan4-1.fna&tp=7&oh=2685f8dde73d342eeb48d701be38df7e&oe=5F6BB207" alt="image"/>
+                        <img class="img-description" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/118031964_332396144630075_6423616184445933153_o.jpg?_nc_cat=110&_nc_sid=8024bb&_nc_ohc=hfmJeao1GDcAX_0wUN2&_nc_ht=scontent-hkt1-1.xx&oh=9c1cc7f89c2127cae143dcc755742aac&oe=5F6C3650" alt="image"/>
                     </div>
                     <div class="description center">Trải nghiệm</div>
-                    <div class="sub-description center">"Work From Home"</div>
-                    <div class="more center">More</div>
+                    <div class="sub-description center">"Working Space"</div>
+                    <div class="more center"><p>More</p></div>
                 </div>
                 <div class="box">
                     <div>
-                        <img class="img-description" src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.0-9/s960x960/117825945_332396151296741_4433696330650530520_o.jpg?_nc_cat=105&_nc_sid=8024bb&_nc_ohc=zVXhB9t_vKEAX9LXmRE&_nc_ht=scontent.fhan4-1.fna&tp=7&oh=2685f8dde73d342eeb48d701be38df7e&oe=5F6BB207" alt="image"/>
+                        <img class="img-description" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/118175726_332396121296744_917932466499128708_o.jpg?_nc_cat=102&_nc_sid=8024bb&_nc_ohc=QkbSGNFWUFoAX_gCEeg&_nc_ht=scontent-hkt1-1.xx&oh=6c28f30660e8f489b5aa63f31aeac487&oe=5F6EE29F" alt="image"/>
                     </div>
                     <div class="description center">Trải nghiệm</div>
-                    <div class="sub-description center">"Work From Home"</div>
-                    <div class="more center">More</div>
+                    <div class="sub-description center">"Đào tạo thực tiễn"</div>
+                    <div class="more center"><p>More</p></div>
                 </div>
             </div>
-            <div style="display: flex; justify-content: space-around; width: 87%; margin-left: 87px;">
+            <div style="margin-top: 77px; display: flex; justify-content: space-around; width: 87%; margin-left: 87px;">
                 <div class="box">
                     <div>
-                        <img class="img-description" src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.0-9/s960x960/117825945_332396151296741_4433696330650530520_o.jpg?_nc_cat=105&_nc_sid=8024bb&_nc_ohc=zVXhB9t_vKEAX9LXmRE&_nc_ht=scontent.fhan4-1.fna&tp=7&oh=2685f8dde73d342eeb48d701be38df7e&oe=5F6BB207" alt="image"/>
+                        <img class="img-description" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/118247281_332396234630066_5564951805553738428_o.jpg?_nc_cat=109&_nc_sid=8024bb&_nc_ohc=6FBjAslixjkAX8i6YEs&_nc_ht=scontent-hkt1-1.xx&oh=55aa631a355d3e557e493613bd02ec3b&oe=5F6D3A66" alt="image"/>
                     </div>
                     <div class="description center">Trải nghiệm</div>
-                    <div class="sub-description center">"Work From Home"</div>
-                    <div class="more center">More</div>
+                    <div class="sub-description center">"Internet Banking"</div>
+                    <div class="more center"><p>More</p></div>
                 </div>
                 <div class="box">
                     <div>
-                        <img class="img-description" src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.0-9/s960x960/117825945_332396151296741_4433696330650530520_o.jpg?_nc_cat=105&_nc_sid=8024bb&_nc_ohc=zVXhB9t_vKEAX9LXmRE&_nc_ht=scontent.fhan4-1.fna&tp=7&oh=2685f8dde73d342eeb48d701be38df7e&oe=5F6BB207" alt="image"/>
+                        <img class="img-description" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/118210791_332396281296728_6880319444407248587_o.jpg?_nc_cat=108&_nc_sid=8024bb&_nc_ohc=Eciustm9qbkAX_LdtaV&_nc_ht=scontent-hkt1-1.xx&oh=3594d4085f039d951bd650a6d49cd826&oe=5F6E1AB9" alt="image"/>
                     </div>
                     <div class="description center">Trải nghiệm</div>
-                    <div class="sub-description center">"Work From Home"</div>
-                    <div class="more center">More</div>
+                    <div class="sub-description center">"Khảo sát lĩnh vực"</div>
+                    <div class="more center"><p>More</p></div>
                 </div>
                 <div class="box">
                     <div>
-                        <img class="img-description" src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.0-9/s960x960/117825945_332396151296741_4433696330650530520_o.jpg?_nc_cat=105&_nc_sid=8024bb&_nc_ohc=zVXhB9t_vKEAX9LXmRE&_nc_ht=scontent.fhan4-1.fna&tp=7&oh=2685f8dde73d342eeb48d701be38df7e&oe=5F6BB207" alt="image"/>
+                        <img class="img-description" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/118159012_332396261296730_754602324851807608_o.jpg?_nc_cat=107&_nc_sid=8024bb&_nc_ohc=VzDE1dRkhOcAX8MpMSG&_nc_ht=scontent-hkt1-1.xx&oh=b3e6d01606af0d7c514515b03c3326a1&oe=5F6E1652" alt="image"/>
                     </div>
                     <div class="description center">Trải nghiệm</div>
-                    <div class="sub-description center">"Work From Home"</div>
-                    <div class="more center">More</div>
+                    <div class="sub-description center">"Kết nối nhân sự"</div>
+                    <div class="more center"><p>More</p></div>
                 </div>
             </div>
         </div>
