--- a/HTML & CSS/Girls learn to code/gioithieu.html
+++ b/HTML & CSS/Girls learn to code/gioithieu.html
@@ -20,5 +20,18 @@
         <div>
             <img style="width: 100%" src="https://scontent.fhan3-1.fna.fbcdn.net/v/t1.0-9/118087363_332546314615058_3330895255443730782_o.jpg?_nc_cat=102&_nc_sid=8024bb&_nc_ohc=7YsVx3VkUPUAX-nwbYe&_nc_ht=scontent.fhan3-1.fna&oh=cab8ed5548877de7da638f21354a453f&oe=5F6DCB5E" alt="image"/>
         </div>
+        <div style="display: flex; justify-content: space-around; margin-left: 80px; margin-top: 69px; margin-right: 80px;">
+            <div>
+                <img style="width: 80%" src="https://scontent.fhan2-6.fna.fbcdn.net/v/t1.0-9/s960x960/118145518_332820367920986_9001090215213916001_o.jpg?_nc_cat=100&_nc_sid=8024bb&_nc_ohc=PiGPkzDXdscAX_iVIVg&_nc_ht=scontent.fhan2-6.fna&tp=7&oh=28034d3e8742cf9e5e4dd9c113c09bf1&oe=5F6FB8B4" alt="image"/>
+            </div>
+            <div style="margin-top: 90px;">
+                <div>
+                    <h2 style="font-size: 40px;">Về chúng tôi</h2>
+                </div>
+                <div>
+                    <p style="cursor: default; font-family: 'Cabin'; font-size: 20px; width: 70%; text-align: justify;">SK Academy., là một trong những Công ty đào tạo hàng đầu Việt Nam với tính thực tiễn và chất lượng cao</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
