--- a/HTML & CSS/Girls learn to code/profile.html
+++ b/HTML & CSS/Girls learn to code/profile.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" type="text/css" href="trangchu.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt"/>
+        <style>
+            p {
+                font-family: 'Prompt' !important;
+            }
+        </style>
     </head>
     <body>
         <div style="display: flex">
@@ -18,14 +23,11 @@
                 <a href="profile.html">Profile</a>
             </div>
         </div>
-        <div>
-            <img style="width: 100%" src="https://scontent.fhan3-1.fna.fbcdn.net/v/t1.0-9/118087363_332546314615058_3330895255443730782_o.jpg?_nc_cat=102&_nc_sid=8024bb&_nc_ohc=7YsVx3VkUPUAX-nwbYe&_nc_ht=scontent.fhan3-1.fna&oh=cab8ed5548877de7da638f21354a453f&oe=5F6DCB5E" alt="image"/>
-        </div>
-        <div style="display: flex; justify-content: space-around; margin-left: 100px; margin-top: 69px; margin-right: 80px;">
-            <div>
-                <img style="width: 80%" src="https://scontent.fhan2-6.fna.fbcdn.net/v/t1.0-9/s960x960/118145518_332820367920986_9001090215213916001_o.jpg?_nc_cat=100&_nc_sid=8024bb&_nc_ohc=PiGPkzDXdscAX_iVIVg&_nc_ht=scontent.fhan2-6.fna&tp=7&oh=28034d3e8742cf9e5e4dd9c113c09bf1&oe=5F6FB8B4" alt="image"/>
+        <div style="margin: 70px; display: flex; justify-content: space-around;">
+            <div style="margin-left: 70px;">
+                <img style="width: 90%" src="https://scontent.fhan2-4.fna.fbcdn.net/v/t1.0-9/s960x960/118346689_332855257917497_6434417577285519587_o.jpg?_nc_cat=110&_nc_sid=8024bb&_nc_ohc=-XtSMQWX7dAAX_f-Rk9&_nc_ht=scontent.fhan2-4.fna&tp=7&oh=6473cc6a4d2784c79b9d37f211b711c0&oe=5F6CA14E" alt="image"/>
             </div>
-            <div style="margin-top: 90px;">
+            <div style="margin-top: 70px;">
                 <div>
                     <h2 style="font-size: 40px;">Về chúng tôi</h2>
                 </div>
