--- a/HTML & CSS/Girls learn to code/trangchu.html
+++ b/HTML & CSS/Girls learn to code/trangchu.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="trangchu.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt"/>
     </head>
     <body>
         <div style="display: flex">
