--- a/HTML & CSS/Girls learn to code/profile.html
+++ b/HTML & CSS/Girls learn to code/profile.html
@@ -9,6 +9,9 @@
         <style>
             p {
                 font-family: 'Prompt' !important;
+                cursor: default;
+                font-family: 'Cabin'; 
+                font-size: 20px; 
             }
         </style>
     </head>
@@ -23,16 +26,23 @@
                 <a href="profile.html">Profile</a>
             </div>
         </div>
-        <div style="margin: 70px; display: flex; justify-content: space-around;">
-            <div style="margin-left: 70px;">
-                <img style="width: 90%" src="https://scontent.fhan2-4.fna.fbcdn.net/v/t1.0-9/s960x960/118346689_332855257917497_6434417577285519587_o.jpg?_nc_cat=110&_nc_sid=8024bb&_nc_ohc=-XtSMQWX7dAAX_f-Rk9&_nc_ht=scontent.fhan2-4.fna&tp=7&oh=6473cc6a4d2784c79b9d37f211b711c0&oe=5F6CA14E" alt="image"/>
+        <div style="display: flex; justify-content: space-around; margin: 70px;">
+            <div style="width: 500px;">
+                <img style="width: 100%" src="https://scontent.fhan2-4.fna.fbcdn.net/v/t1.0-9/s960x960/118346689_332855257917497_6434417577285519587_o.jpg?_nc_cat=110&_nc_sid=8024bb&_nc_ohc=-XtSMQWX7dAAX_f-Rk9&_nc_ht=scontent.fhan2-4.fna&tp=7&oh=6473cc6a4d2784c79b9d37f211b711c0&oe=5F6CA14E" alt="image"/>
             </div>
-            <div style="margin-top: 70px;">
+            <div>
                 <div>
-                    <h2 style="font-size: 40px;">Về chúng tôi</h2>
+                    <h2 style="font-size: 40px; margin-top: 80px;">Thông tin cá nhân</h2>
                 </div>
                 <div>
-                    <p style="cursor: default; font-family: 'Cabin'; font-size: 20px; width: 90%; text-align: justify;">SK Academy., là một trong những Công ty đào tạo hàng đầu Việt Nam với tính thực tiễn và chất lượng cao</p>
+                    <p>
+                        Họ và tên: Vũ Lê Anh Đức<br/>
+                        Ngày sinh: 16/4/2007<br/>
+                        SĐT: 0822071604<br/>
+                        Email: vuleanhduc1604@gmail.com<br/>
+                        Công ty làm việc: SK Consulting & Academy<br/>
+                        Vị trí: Website Coder
+                    </p>
                 </div>
             </div>
         </div>
