--- a/HTML & CSS/Girls learn to code/gioithieu.html
+++ b/HTML & CSS/Girls learn to code/gioithieu.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" type="text/css" href="trangchu.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div style="display: flex">
             <div>
-                <img style="margin-left: 20px; width: 240px; height: 66px" src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.0-9/117235754_326532311883125_2365602251833510111_n.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=DSCl9wdmhkMAX8quZCY&_nc_ht=scontent.fhan3-3.fna&oh=d6fc28fc92977404cfebe57e37a5b8d2&oe=5F638010" alt="image"/>
+                <img style="text-align: center; width: 240px; height: 66px " src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.0-9/117235754_326532311883125_2365602251833510111_n.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=DSCl9wdmhkMAX8quZCY&_nc_ht=scontent.fhan3-3.fna&oh=d6fc28fc92977404cfebe57e37a5b8d2&oe=5F638010" alt="image"/>
             </div>
             <div class="container">
                 <a href="trangchu.html">Trang chủ</a>
