--- a/HTML & CSS/Girls learn to code/profile.html
+++ b/HTML & CSS/Girls learn to code/profile.html
@@ -24,6 +24,7 @@
                 <a href="trangchu.html">Trang chủ</a>
                 <a href="gioithieu.html">About</a>
                 <a href="profile.html">Profile</a>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
             </div>
         </div>
         <div style="display: flex; justify-content: space-around; margin: 70px;">
