--- a/HTML & CSS/Girls learn to code/trangchu.html
+++ b/HTML & CSS/Girls learn to code/trangchu.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="trangchu.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div style="display: flex">
@@ -30,7 +31,7 @@
                     </div>
                     <div class="description center">Trải nghiệm</div>
                     <div class="sub-description center">"Work From Home"</div>
-                    <div class="more center"><p>More</p></div>
+                    <div class="more center"><p>See More</p></div>
                 </div>
                 <div class="box">
                     <div>
@@ -38,7 +39,7 @@
                     </div>
                     <div class="description center">Trải nghiệm</div>
                     <div class="sub-description center">"Working Space"</div>
-                    <div class="more center"><p>More</p></div>
+                    <div class="more center"><p>See More</p></div>
                 </div>
                 <div class="box">
                     <div>
@@ -46,7 +47,7 @@
                     </div>
                     <div class="description center">Trải nghiệm</div>
                     <div class="sub-description center">"Đào tạo thực tiễn"</div>
-                    <div class="more center"><p>More</p></div>
+                    <div class="more center"><p>See More</p></div>
                 </div>
             </div>
             <div style="margin-top: 77px; display: flex; justify-content: space-around; width: 87%; margin-left: 87px;">
@@ -56,7 +57,7 @@
                     </div>
                     <div class="description center">Trải nghiệm</div>
                     <div class="sub-description center">"Internet Banking"</div>
-                    <div class="more center"><p>More</p></div>
+                    <div class="more center"><p>See More</p></div>
                 </div>
                 <div class="box">
                     <div>
@@ -64,7 +65,7 @@
                     </div>
                     <div class="description center">Trải nghiệm</div>
                     <div class="sub-description center">"Khảo sát lĩnh vực"</div>
-                    <div class="more center"><p>More</p></div>
+                    <div class="more center"><p>See More</p></div>
                 </div>
                 <div class="box">
                     <div>
@@ -72,7 +73,7 @@
                     </div>
                     <div class="description center">Trải nghiệm</div>
                     <div class="sub-description center">"Kết nối nhân sự"</div>
-                    <div class="more center"><p>More</p></div>
+                    <div class="more center"><p>See More</p></div>
                 </div>
             </div>
         </div>
