--- a/Girls learn to code/profile.html
+++ b/Girls learn to code/profile.html
@@ -15,10 +15,10 @@
             }
         </style>
     </head>
-    <body>
+    <body style="max-width: 1396.55px; max-height: 514px; min-width: 1396px; min-height: 513px;">
         <div style="display: flex">
             <div>
-                <img style="margin-left: 20px; width: 240px; height: 66px" src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.0-9/117235754_326532311883125_2365602251833510111_n.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=DSCl9wdmhkMAX8quZCY&_nc_ht=scontent.fhan3-3.fna&oh=d6fc28fc92977404cfebe57e37a5b8d2&oe=5F638010" alt="image"/>
+                <img style="margin-left: 20px; width: 100%; height: 66px" src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.0-9/117235754_326532311883125_2365602251833510111_n.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=DSCl9wdmhkMAX8quZCY&_nc_ht=scontent.fhan3-3.fna&oh=d6fc28fc92977404cfebe57e37a5b8d2&oe=5F638010" alt="image"/>
             </div>
             <div class="container">
                 <a href="trangchu.html">Trang chủ</a>
@@ -27,7 +27,7 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
             </div>
         </div>
-        <div style="display: flex; justify-content: space-around; margin: 70px;">
+        <div style="display: flex; justify-content: space-around; margin: auto;">
             <div style="width: 500px;">
                 <img style="width: 100%" src="https://scontent.fhan2-4.fna.fbcdn.net/v/t1.0-9/s960x960/118346689_332855257917497_6434417577285519587_o.jpg?_nc_cat=110&_nc_sid=8024bb&_nc_ohc=-XtSMQWX7dAAX_f-Rk9&_nc_ht=scontent.fhan2-4.fna&tp=7&oh=6473cc6a4d2784c79b9d37f211b711c0&oe=5F6CA14E" alt="image"/>
             </div>
