girls learn to code

--- a/Girls learn to code/trangchu.html
+++ b/Girls learn to code/trangchu.html
@@ -20,8 +20,8 @@
             </div>
         </div>
         <div>
-            <div class="img">
-                <img style="margin-left: 70px;" src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.0-9/117908034_326549571881399_4614732497758321710_o.jpg?_nc_cat=104&_nc_sid=730e14&_nc_ohc=wEEP9NFcO1oAX_E1eC6&_nc_ht=scontent.fhan4-1.fna&oh=aec2d38293ec404ba0fc136aeb4d494c&oe=5F643B57" alt="image"/>
+            <div class="img" style="text-align: center">
+                <img style="margin: auto;" src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.0-9/117908034_326549571881399_4614732497758321710_o.jpg?_nc_cat=104&_nc_sid=730e14&_nc_ohc=wEEP9NFcO1oAX_E1eC6&_nc_ht=scontent.fhan4-1.fna&oh=aec2d38293ec404ba0fc136aeb4d494c&oe=5F643B57" alt="image"/>
             </div>
             <h2 class="center">CÁC GÓI SẢN PHẨM TRẢI NGHIỆM</h2>
             <div style="display: flex; justify-content: space-around; width: 87%; margin-left: 87px;">
