--- a/Javascript/Day10/index.html
+++ b/Javascript/Day10/index.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Example</title>
+    <style>
+        #canvas {
+            background-color: blue;
+            margin: 0;
+            padding: 0
+        }
+    </style>
 </head>
 <body>
-    <!-- Tạo tag canvas có id là "canvas" -->
     <canvas id="canvas"></canvas>
-
     <script>
-        //Truy cập vào ele có id là canvas
         var canvas = document.getElementById('canvas')
-        // var canvas = document.querySelector('#canvas')
-        console.log(canvas);
-
-        //Mặc định canvas có width : 300, height: 150, background-color: #fff
-        //Thay đổi propery của canvas
-        canvas.width = 700
-        canvas.height = 700
-        // canvas.style.background = 'red'
-        canvas.style.border = '2px solid blue'
-        // canvas.style.borderRadius = '700px'
-
-        //Vẽ đối tượng 2d trong canvas
-        var ctx = canvas.getContext('2d');
-        console.log(ctx);
-         
+        canvas.addEventListener('keydown', function(event) {
+            if(event.keyCode==13) {
+                console.log("=)))")
+            } else {
+                console.log('Bro, click the enter button, there is a suprise')
+            }
+        })
+        canvas.addEventListener('click', function(event) {
+            console.log('clicked')
+            console.log(event)
+            console.log(event.clientX)
+        })
     </script>
 </body>
 </html>
