--- a/Javascript/Day10/index.html
+++ b/Javascript/Day10/index.html
@@ -6,9 +6,9 @@
     <title>Canvas Example</title>
     <style>
         #canvas {
-            background-color: blue;
+            background-color: grey;
             margin: 0;
-            padding: 0
+            padding: 0; 
         }
     </style>
 </head>
@@ -16,17 +16,21 @@
     <canvas id="canvas"></canvas>
     <script>
         var canvas = document.getElementById('canvas')
+        canvas.width = 1000;
+        canvas.height = 500;
+        canvas.style.border = '2px solid green'
+        var ctx = canvas.getContext('2d');
+        canvas.addEventListener('click', function(event) {
+            ctx.fillStyle = '#f5f5f5'
+            ctx.strokeStyle = 'transparent'
+            ctx.arc(event.clientX, event.clientY, 100, 0, 2 * Math.PI, false)
+            ctx.stroke()
+            ctx.fill()
+        })
         canvas.addEventListener('keydown', function(event) {
             if(event.keyCode==13) {
-                console.log("=)))")
-            } else {
-                console.log('Bro, click the enter button, there is a suprise')
-            }
-        })
-        canvas.addEventListener('click', function(event) {
-            console.log('clicked')
-            console.log(event)
-            console.log(event.clientX)
+                ctx.clearRect(0,0,canvas.width, canvas.height)
+            } 
         })
     </script>
 </body>
