--- a/Javascript/Day10/index.html
+++ b/Javascript/Day10/index.html
@@ -9,6 +9,7 @@
             background-color: grey;
             margin: 0;
             padding: 0; 
+            border: 1px 
         }
     </style>
 </head>
@@ -16,21 +17,29 @@
     <canvas id="canvas"></canvas>
     <script>
         var canvas = document.getElementById('canvas')
-        canvas.width = 1000;
-        canvas.height = 500;
+        canvas.width = 10;
+        canvas.height = 10;
         canvas.style.border = '2px solid green'
         var ctx = canvas.getContext('2d');
-        canvas.addEventListener('click', function(event) {
+        canvas.addEventListener('mousemove', function(event) {
             ctx.fillStyle = '#f5f5f5'
             ctx.strokeStyle = 'transparent'
-            ctx.arc(event.clientX, event.clientY, 100, 0, 2 * Math.PI, false)
+            ctx.arc(event.clientX, event.clientY, 20, 0, 2 * Math.PI, false)
             ctx.stroke()
             ctx.fill()
         })
         canvas.addEventListener('keydown', function(event) {
-            if(event.keyCode==13) {
+            if(event.keyCode==8) {
                 ctx.clearRect(0,0,canvas.width, canvas.height)
             } 
+        })
+        const canvas = document.getElementById('canvas')
+        canvas.width = innerWidth * 0.9;
+        canvas.height = innerHeight * 0.9;
+        canvas.style.border = '1px solid #f5f5f5'
+        window.addEventListener('resize', function() {
+            canvas.width = innerWidth * 0.9;
+            canvas.height = innerHeight * 0.9
         })
     </script>
 </body>
