--- a/Javascript/Day10/animation.html
+++ b/Javascript/Day10/animation.html
@@ -29,10 +29,39 @@
                 ctx.stroke();
                 ctx.fill();
             }
-        }
             // Khởi tạo 1 hình tròn
-            let circle = new Circle(100, 100, 50, 'red')
+            move(dx, dy) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                if (this.x + dx > canvas.width) {
+                    this.x = canvas.width - this.radius;
+                    this.draw()
+                    return
+                }
+
+                if (this.x + dx <= this.radius) {
+                    this.x = this.radius;
+                    this.draw();
+                    return
+                }
+                this.x = this.x + dx;
+                this.y = this.y + dy;
+                this.draw();
+            }
+        }
+            
+            let circle = new Circle(100, 100, 45, 'red')
             circle.draw()
+            document.addEventListener('keydown', function(event) {
+                if(event.keyCode == 37) {
+                    circle.move(-40,0)
+                } else if (event.keyCode == 39) {
+                    circle.move(40,0)
+                } else if (event.keyCode == 38) {
+                    circle.move(0, -40)
+                } else if (event.keyCode == 40) {
+                    circle.move(0, 40);
+                }
+            })
     </script>
 </body>
 </html>
