--- a/Javascript/Day10/animation.html
+++ b/Javascript/Day10/animation.html
@@ -30,21 +30,23 @@
                 ctx.fill();
             }
             // Khởi tạo 1 hình tròn
-            move(dx, dy) {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-                if (this.x + dx > canvas.width) {
-                    this.x = canvas.width - this.radius;
-                    this.draw()
-                    return
+            move() {
+                if (this.x > canvas.width - this.radius) {
+                    this.dx = -this.dx;
                 }
 
                 if (this.x + dx <= this.radius) {
-                    this.x = this.radius;
-                    this.draw();
-                    return
+                    this.dx = -this.dx;
                 }
-                this.x = this.x + dx;
-                this.y = this.y + dy;
+                if (this.y > canvas.height - this.radius) {
+                    this.dy = -this.dy;
+                }
+
+                if (this.y + dy <= this.radius) {
+                    this.dy = -this.dy;
+                }
+                this.x = this.x + this.dx;
+                this.y = this.y + this.dy;
                 this.draw();
             }
         }
@@ -53,15 +55,26 @@
             circle.draw()
             document.addEventListener('keydown', function(event) {
                 if(event.keyCode == 37) {
-                    circle.move(-40,0)
+                    circle.dx = -2
+                    circle.dy = 0
                 } else if (event.keyCode == 39) {
-                    circle.move(40,0)
-                } else if (event.keyCode == 38) {
-                    circle.move(0, -40)
+                    circle.dx = 2
+                    circle.dy = 0
+                } else if(event.keyCode == 38) {
+                    circle.dy = -2
+                    circle.dx = 0
                 } else if (event.keyCode == 40) {
-                    circle.move(0, 40);
-                }
+                    circle.dy = 2
+                    circle.dx = 0
+                } 
             })
+            function animate() {
+                console.log('animate');
+                requestAnimationFrame(animate);
+                ctx.clearRect(0,0,canvas.width, canvas.height);
+                circle.move();
+            }
+            animate();
     </script>
 </body>
 </html>
